add api get movies and connect to mongo db
